--- a/portfolio.html
+++ b/portfolio.html
@@ -435,9 +435,9 @@
 		</div>
 		<div class="row card-list">
 			<div class="col-lg-12 col-md-12 grid-sizer"></div>
-			<div class="col-lg-12 col-sm-12 single-card-item ar">
+			<div class="col-sm-12 single-card-item ar">
 				<div class="pbwide shadow bg-gradient1">
-					<div class="portfolio-item-info-tt">
+					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
 							<img src="images/case-study/placea-logo.png" alt="logo" class="img-fluid">
 						</div>
@@ -454,11 +454,11 @@
 							<span class="circle"></span>
 						</a>
 					</div>
-					<div class="portfolio-wide-image">
+					<div class="portfolio-wide-image d-block me-auto">
 						<div class="img-wide-blocktt tilt-outer">
 							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
 								<div class="">
-									<img src="images/case-study/placea-app.png" alt="img" class="img-fluid">
+									<img src="images/case-study/placea-app.png" alt="img" class="img-fluid" width="80%">
 								</div>
 							</div>
 						</div>
